@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-11T02:21:05Z",
+  "timestamp" : "2025-07-13T02:30:09Z",
   "count_outdated" : 5690,
   "uniques_outdated" : 1136,
-  "count" : 5697,
-  "uniques" : 1139,
+  "count" : 5701,
+  "uniques" : 1140,
   "views" : [
     {
       "timestamp": "2025-06-29T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-12T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
