@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 11,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2025-06-29T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2025-07-05T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-12T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
